ajout du stockage des contacts rencontrés dans l'objet commandant et affichage dans le rapport (#32)